# PrimoPearlBot

./: .env  .gitignore  FIX_LIST.md  README.md  main.py  project.bat  project_count_line.py  pyproject.toml  start.bat
BotCode/: __init__.py  config.py  main.py
BotCode/MySQL/: __init_db__.py  db.py
BotCode/inline/: __init__.py  posts_inline.py
BotCode/keyboards/: __init__.py  help_kb.py  more_kb.py  start_kb.py
BotCode/routers/: __init__.py  msg_default.py
BotCode/time/: __init__.py
BotCode/timer/: __init__.py
BotInfo/: bot_secrets.py  user_data.txt
BotInfo/Poetry/: pyproject.toml
BotLibrary/: __init__.py  config.py
BotLibrary/analitics/: __init__.py  find_ids.py  message_to_file.py  start_info_out.py  type_messages.py  types_msg.py  user_data_to_file.py
BotLibrary/configs/: __init__.py  config.py  important_path.py  list_ids.py  settings.py
BotLibrary/timers/: __init__.py  start_timer.py  time.py
BotLibrary/validators/: __init__.py  email_validators.py
BotSettings/: __init__.py
BotSettings/analitics/: __init__.py  find_ids.py  id_username.py  message_to_file.py  start_info_out.py  type_messages.py  user_data_to_file.py
BotSettings/configs/: __init__.py  bot_secrets_example.py  config.py
Documentation/: README.md
MySQL/: __init__.py  db.py  list_ids.json  list_ids.py  user_data.db
OldFiles/: bot_log_old.txt  hui.txt  media_handlers.py  pips.txt  user_info_data_old.txt
OldFiles/BotCode_Old/: config.py  func.py  main.py
ProjectsFile/: .env  project_count_line.py  start.bat
Test/: __init__.py
settings/: __init__.py
(+137 files in other folders)
