[tool.poetry]
name = "primopearlbot"
version = "2.2"
description = ""
authors = ["Whyverum <sergeyzavalin@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.3"
requests = "^2.32.3"
apscheduler = "^3.11.0"
aiogram = "^3.15.0"
aiomysql = "^0.2.0"
async-timeout = "^5.0.1"
sympy = "^1.13.3"
yarl = "^1.18.3"
pytz = "^2024.2"
termcolor = "^2.5.0"
colorama = "^0.4.6"
art = "^6.4"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.7.0"
python-decouple = "^3.8"
charset-normalizer = "^3.4.0"
frozenlist = "^1.5.0"
customtkinter = "^5.2.2"
pillow = "^11.0.0"
certifi = "^2024.12.14"
idna = "^3.10"
email-validator = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
